--- a/class_07/sass/_settings.scss
+++ b/class_07/sass/_settings.scss
@@ -12,11 +12,11 @@
 
 // Colors Settings
 
-// $mainColor: #2ba6cb;
+$mainColor: #ed6456;
 // $secondaryColor: #e9e9e9;
 // $alertColor: #c60f13;
 // $successColor: #5da423;
-// $txtColor: #222;
+$txtColor: #444;
 // $highlightColor: #ffff99;
 // $black: #000;
 // $white: #fff;
@@ -26,11 +26,11 @@
 // Font Settings
 
 // $fontSmoothing: antialiased;
-$headerFontFamily: "Museo-500";
-// $headerFontWeight: bold;
+$headerFontFamily: "MuseoSlab-500";
+$headerFontWeight: 500;
 // $headerFontStyle: normal;
-// $headerFontColor: #222;
-// $bodyFontFamily: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$headerFontColor: #333;
+$bodyFontFamily: "Open Sans", Arial, sans-serif;
 // $bodyFontWeight: normal;
 // $bodyFontStyle: normal;
 // $bodyFontColor: $txtColor;
