--- a/class_07/stylesheets/app.css
+++ b/class_07/stylesheets/app.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
 /* Requires: normalize.css */
 /* Global Reset & Standards ---------------------- */
@@ -1995,10 +1994,10 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
   line-height: 45px;
   padding: 0 15px;
 }
-.top-bar ul > li:not(.name):hover, .top-bar ul > li:not(.name).active, .top-bar ul > li:not(.name):focus {
+.top-bar ul > li:not(.name, .s-links):hover, .top-bar ul > li:not(.name, .s-links).active, .top-bar ul > li:not(.name, .s-links):focus {
   background: #df2a18;
 }
-.top-bar ul > li:not(.name):hover a, .top-bar ul > li:not(.name).active a, .top-bar ul > li:not(.name):focus a {
+.top-bar ul > li:not(.name, .s-links):hover a, .top-bar ul > li:not(.name, .s-links).active a, .top-bar ul > li:not(.name, .s-links):focus a {
   color: #d9d9d9;
 }
 .top-bar ul > li.divider {
@@ -2355,7 +2354,7 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
   position: absolute;
   top: 0;
   left: -20px;
-  background: url('../images/foundation/orbit/rotator-black.png?1361928283') no-repeat;
+  background: url('../images/foundation/orbit/rotator-black.png?1361553997') no-repeat;
   z-index: 3;
 }
 .orbit-wrapper span.rotator.move {
@@ -2374,7 +2373,7 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
 .orbit-wrapper span.mask.move {
   width: 40px;
   left: 0;
-  background: url('../images/foundation/orbit/timer-black.png?1361928283') repeat 0 0;
+  background: url('../images/foundation/orbit/timer-black.png?1361553997') repeat 0 0;
 }
 .orbit-wrapper span.pause {
   display: block;
@@ -2383,12 +2382,12 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
   position: absolute;
   top: 0;
   left: 0;
-  background: url('../images/foundation/orbit/pause-black.png?1361928283') no-repeat;
+  background: url('../images/foundation/orbit/pause-black.png?1361553997') no-repeat;
   z-index: 4;
   opacity: 0;
 }
 .orbit-wrapper span.pause.active {
-  background: url('../images/foundation/orbit/pause-black.png?1361928283') no-repeat 0 -40px;
+  background: url('../images/foundation/orbit/pause-black.png?1361553997') no-repeat 0 -40px;
 }
 .orbit-wrapper .timer:hover span.pause, .orbit-wrapper .timer:focus span.pause, .orbit-wrapper span.pause.active {
   opacity: 1;
@@ -2429,21 +2428,21 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
   cursor: pointer;
 }
 .orbit-wrapper .slider-nav span.right {
-  background: url('../images/foundation/orbit/right-arrow.png?1361928283');
+  background: url('../images/foundation/orbit/right-arrow.png?1361553997');
   background-size: 100%;
   right: 0;
 }
 .orbit-wrapper .slider-nav span.left {
-  background: url('../images/foundation/orbit/left-arrow.png?1361928283');
+  background: url('../images/foundation/orbit/left-arrow.png?1361553997');
   background-size: 100%;
   left: 0;
 }
 
 .lt-ie9 .orbit-wrapper .slider-nav span.right {
-  background: url('../images/foundation/orbit/right-arrow-small.png?1361928283');
+  background: url('../images/foundation/orbit/right-arrow-small.png?1361553997');
 }
 .lt-ie9 .orbit-wrapper .slider-nav span.left {
-  background: url('../images/foundation/orbit/left-arrow-small.png?1361928283');
+  background: url('../images/foundation/orbit/left-arrow-small.png?1361553997');
 }
 
 /* Bullet Nav ---------------------- */
@@ -2462,7 +2461,7 @@ ul.orbit-bullets li {
   cursor: pointer;
   color: #999999;
   text-indent: -9999px;
-  background: url('../images/foundation/orbit/bullets.jpg?1361928283') no-repeat 4px 0;
+  background: url('../images/foundation/orbit/bullets.jpg?1361553997') no-repeat 4px 0;
   width: 13px;
   height: 12px;
   overflow: hidden;
@@ -5625,6 +5624,7 @@ input[type="search"].round {
 .row.blog-post + .row.blog-post {
   margin-bottom: 40px;
 }
+
 .title-section {
   margin: 20px auto;
 }
@@ -5678,7 +5678,6 @@ input[type="search"].round {
 .contact-info .icon {
   float: left;
   margin-right: 20px;
->>>>>>> b3e1da903d91fc5e7358a131e17899db111ef2c9
 }
 
 .row.footer {
