--- a/class_07/sass/app.scss
+++ b/class_07/sass/app.scss
@@ -25,8 +25,8 @@
 // @import "foundation/mixins/respond-to";
 // @import "foundation/mixins/semantic-grid";
 
-@import "modular-scale";
-@import "foundation/common/globals";
+// @import "modular-scale";
+// @import "foundation/common/globals";
 
 // Must include the grid for any responsiveness
 
@@ -129,7 +129,7 @@ input[type="search"]{
   color: #666;
   font-family: $headerFontFamily;
   font-size: ms(1);
-  padding: 0 3.5%;
+  padding: 0 2.5%;
   line-height: 63px;
   width: 10%;
   border-right: 1px solid #eee;
@@ -141,6 +141,7 @@ input[type="search"]{
     padding-left: 0;
   }
   &:last-child{
+    padding-right: 0;
     border-right: none;
   }
 }
@@ -445,5 +446,11 @@ input[type="search"]{
   & + & {
     margin-top: 0;
     margin-bottom: 40px;
+  }
+}
+
+.faq-column {
+  & .testimonial {
+    margin-top: 0px;
   }
 }
