--- a/class_08/scss/_settings.scss
+++ b/class_08/scss/_settings.scss
@@ -16,7 +16,7 @@
 
 // We use these to control various global styles
 // $body-bg: #fff;
-// $body-font-color: #222;
+$body-font-color: #444;
 $body-font-family: "Open Sans", Arial, sans-serif;
 // $body-font-weight: normal;
 // $body-font-style: normal;
@@ -28,7 +28,7 @@ $body-font-family: "Open Sans", Arial, sans-serif;
 // $text-direction: ltr;
 
 // We use these as default colors throughout
-// $primary-color: #2ba6cb;
+$primary-color: #ed6456;
 // $secondary-color: #e9e9e9;
 // $alert-color: #c60f13;
 // $success-color: #5da423;
@@ -73,7 +73,7 @@ $body-font-family: "Open Sans", Arial, sans-serif;
 $header-font-family: "MuseoSlab-500", Arial, sans-serif;
 $header-font-weight: 500;
 // $header-font-style: normal;
-// $header-font-color #222;
+$header-font-color: #666;
 // $header-line-height: 1.4;
 // $header-top-margin .2em;
 // $header-bottom-margin .5em;
