--- a/class_08/scss/app.scss
+++ b/class_08/scss/app.scss
@@ -46,7 +46,7 @@
 // @import "foundation/components/dropdown";
 
 @include font-face("MuseoSlab-500", font-files("25F607_0_0.eot", "25F607_0_0.eot?#iefix", "25F607_0_0.woff", "25F607_0_0.ttf", "25F607_0_0.svg#wf"));
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800");
 
 *{
   @include box-sizing("border-box");
@@ -180,6 +180,46 @@ input[type="text"]{
 
 span.ctrl {
   padding-top: emCalc(18px);
+}
+
+.news-wrapper {
+  border-bottom: emCalc(1px) solid #eee;
+}
+
+.large-12.newsletter {
+  padding: 0 emCalc(20px);
+}
+
+.large-12.pass {
+  min-height: emCalc(157px);
+  background: url('../img/ticket.png') center center no-repeat;
+}
+
+.button.expand.view-more {
+  font-size: emCalc(14px);
+  font-weight: 100;
+  font-style: italic;
+  padding: emCalc(7px) emCalc(60px);
+  &.free {
+    margin-top: emCalc(120px);
+  }
+}
+
+.news {
+  text-align: center;
+  display: block;
+  font-family: $header-font-family;
+  font-weight: $header-font-weight;
+  font-size: emCalc(34px);
+  letter-spacing: -1px;
+}
+
+.letter {
+  padding: emCalc(10px) 0;
+  text-align: center;
+  display: block;
+  font-size: emCalc(13px);
+  font-style: italic;
 }
 
 @media only screen and (max-width: 939px) {
