--- a/class_08/css/app.css
+++ b/class_08/css/app.css
@@ -964,13 +964,13 @@ select {
   }
 }
 p.lead {
-  font-size: 1.21875em;
+  font-size: 1.09375em;
   line-height: 1.6;
 }
 
 .subheader {
   line-height: 1.4;
-  color: #b3b3b3;
+  color: #919191;
   font-weight: 300;
   margin-top: 0.2em;
   margin-bottom: 0.5em;
@@ -1018,7 +1018,7 @@ a img {
 p {
   font-family: inherit;
   font-weight: normal;
-  font-size: 1em;
+  font-size: 0.875em;
   line-height: 1.6;
   margin-bottom: 1.25em;
 }
@@ -1033,7 +1033,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "MuseoSlab-500", Arial, sans-serif;
   font-weight: 500;
   font-style: normal;
-  color: #666666;
+  color: #444444;
   text-rendering: optimizeLegibility;
   margin-top: 0.2em;
   margin-bottom: 0.5em;
@@ -1041,7 +1041,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
   font-size: 60%;
-  color: #b3b3b3;
+  color: #919191;
   line-height: 0;
 }
 
@@ -1105,7 +1105,7 @@ code {
 ul,
 ol,
 dl {
-  font-size: 1em;
+  font-size: 0.875em;
   line-height: 1.6;
   margin-bottom: 1.25em;
   list-style-position: outside;
@@ -1181,20 +1181,20 @@ blockquote {
 blockquote cite {
   display: block;
   font-size: 0.8125em;
-  color: #999999;
+  color: #777777;
 }
 blockquote cite:before {
   content: "\2014 \0020";
 }
 blockquote cite a,
 blockquote cite a:visited {
-  color: #999999;
+  color: #777777;
 }
 
 blockquote,
 blockquote p {
   line-height: 1.6;
-  color: #b3b3b3;
+  color: #919191;
 }
 
 /* Microformats */
@@ -4570,6 +4570,8 @@ span.ctrl {
 }
 
 .news-wrapper {
+  padding-top: 0.625em;
+  border-top: 0.125em solid #eeeeee;
   border-bottom: 0.0625em solid #eeeeee;
 }
 
@@ -4607,6 +4609,64 @@ span.ctrl {
   display: block;
   font-size: 0.8125em;
   font-style: italic;
+}
+
+.subtle {
+  margin: 3.75em -0.625em 0;
+  padding-top: 3.75em;
+  background: url("../img/subtle_grunge.png") top left repeat;
+  -webkit-box-shadow: inset 0px 1px 10px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: inset 0px 1px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0px 1px 10px rgba(0, 0, 0, 0.25);
+}
+
+.footer {
+  min-height: 12.5em;
+  background-color: #555;
+}
+
+.testimonial {
+  min-height: 17.5em;
+  background: url("../img/testimonial_bg.png") bottom center no-repeat;
+}
+
+.read-more {
+  color: #ed6456;
+  font-size: 0.9375em;
+  font-style: italic;
+}
+
+.bot {
+  margin-bottom: 0.625em;
+}
+
+.content-head {
+  padding-bottom: 0.3125em;
+  border-bottom: 2px solid #cccccc;
+}
+
+.muted {
+  color: #999;
+  font-style: italic;
+}
+
+.follow {
+  padding-top: 0.3125em;
+  padding-bottom: 0.3125em;
+  border-top: 1px solid #cccccc;
+  border-bottom: 1px solid #cccccc;
+}
+
+.stats-bg {
+  min-height: 18.75em;
+  background-color: #ed6456;
+  -webkit-box-shadow: inset 0 -10px 15px -10px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: inset 0 -10px 15px -10px rgba(0, 0, 0, 0.8);
+  box-shadow: inset 0 -10px 15px -10px rgba(0, 0, 0, 0.8);
+}
+
+.row.main-content {
+  margin-bottom: 2.5em;
 }
 
 @media only screen and (max-width: 939px) {
