--- a/class_08/css/app.css
+++ b/class_08/css/app.css
@@ -4495,9 +4495,9 @@ input[type="text"].rounded {
   border-radius: 1000px;
 }
 input[type="text"].input {
-  -webkit-box-shadow: inset 0px 10px 15px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: inset 0px 10px 15px rgba(0, 0, 0, 0.1);
-  box-shadow: inset 0px 10px 15px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0px 7px 15px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0px 7px 15px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0px 7px 15px rgba(0, 0, 0, 0.05);
 }
 
 .row.nav-wrapper {
@@ -4540,8 +4540,8 @@ input[type="text"].input {
 }
 .inline-list.main-nav li {
   margin: 0;
-  padding-right: 1em;
-  padding-left: 1em;
+  padding-right: 1.5625em;
+  padding-left: 1.5625em;
   border-right: 1px solid #eeeeee;
 }
 .inline-list.main-nav li:first-child {
@@ -4559,14 +4559,10 @@ input[type="text"].input {
   letter-spacing: -0.0625em;
 }
 
-.slider-left {
-  border-left: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-}
-
-.slider-right {
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
+.slider {
+  -webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.25);
 }
 
 .pager {
