--- a/class_08/css/app.css
+++ b/class_08/css/app.css
@@ -4653,10 +4653,6 @@ span.ctrl {
   padding-top: 3.75em;
   padding-bottom: 3.75em;
 }
-.footer .large-9 {
-  padding-left: 0;
-  padding-right: 0;
-}
 .footer p {
   color: #ddd;
   margin: 0;
@@ -4753,6 +4749,16 @@ span.ctrl {
 }
 .stat-btns .blue:hover {
   background-color: #144777;
+}
+
+.wrapper,
+.top-bar,
+.top-bar-section .has-form,
+.top-bar-section li a:not(.button) {
+  background-color: #ed6456;
+  -webkit-box-shadow: inset 0 -10px 20px -10px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: inset 0 -10px 20px -10px rgba(0, 0, 0, 0.4);
+  box-shadow: inset 0 -10px 20px -10px rgba(0, 0, 0, 0.4);
 }
 
 @media only screen and (max-width: 939px) {
